@@ -1,5 +1,8 @@
 2023-09-16  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-mode-time-string): Test if
+	format-time-string can accept three arguments.
+
 	* ebuild-mode.el (sh-must-be-shell-mode): Test if the function is
 	defined at compile time. This should only be the case for Emacs
 	versions where defadvice is unobsolete.
